force-app/main/default/objects/Apttus_Approval__Backup_Approver__c/fields/Apttus_Approval__Backup_Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Backup_Action__c</fullName>
    <description>Backup action</description>
    <formula>IF(NOT(Apttus_Approval__InEffect__c), HYPERLINK("/apex/Apttus_Approval__BackupApproverAction?approverId=" &amp;Apttus_Approval__Current_User__c &amp; "&amp;backupApproverAction=activate", IMAGE("/resource/Apttus_Approval__Button_Activate", "Activate Backup"), "_self"), IF(AND(Apttus_Approval__InEffect__c,Apttus_Approval__IsActive__c), HYPERLINK("/apex/Apttus_Approval__BackupApproverAction?approverId=" &amp;Apttus_Approval__Current_User__c &amp; "&amp;backupApproverAction=deactivate", IMAGE("/resource/Apttus_Approval__Button_Deactivate", "Deactivate Backup"), "_self"), "") )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Action to activate or deactivate the backup</inlineHelpText>
    <label>Backup/Delegate Action</label>
    <type>Text</type>
</CustomField>