force-app/main/default/objects/Apttus_Approval__Backup_Approver__c/fields/Apttus_Approval__Comment__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Comment__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>