force-app/main/default/objects/Apttus_Approval__Backup_Approver__c/fields/Apttus_Approval__DelegateUserIds__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__DelegateUserIds__c</fullName>
    <description>IDs of approvers who were designated as Delegate of Backup</description>
    <inlineHelpText>IDs of approvers who were designated as Delegate of Backup</inlineHelpText>
    <label>Delegate Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>