force-app/main/default/objects/Apttus_Approval__Backup_Approver__c/fields/Apttus_Approval__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Effective_Date__c</fullName>
    <description>Backup effective date</description>
    <inlineHelpText>Please enter an effective date only if you are not activating it immediately. Otherwise use the Activate button on the next screen to Activate Backup immediately.</inlineHelpText>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>