force-app/main/default/objects/Apttus_Approval__Backup_Approver__c/fields/Apttus_Approval__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Expiration_Date__c</fullName>
    <description>Backup expiration date</description>
    <inlineHelpText>Please enter an expiration date only if you need the system to expire it automatically at a future date. Otherwise use the Deactivate button on the next screen to cancel the backup immediately</inlineHelpText>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>