force-app/main/default/objects/Apttus_Approval__Backup_Approver__c/fields/Apttus_Approval__IsDelegate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__IsDelegate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the this entry is for delegate user.</description>
    <inlineHelpText>Indicates that the this entry is for delegate user.</inlineHelpText>
    <label>Is Delegate</label>
    <type>Checkbox</type>
</CustomField>